--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.4",
+    "ethers": "^6.13.2",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
